// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enableRichHistory: false should capture list changes in history entries 1`] = `
{
  "history": [
    {
      "changes": [
        {
          "currentLength": 3,
          "itemChanges": [
            {
              "data": undefined,
              "index": 0,
              "kind": 2,
              "oldIndex": 2,
            },
            {
              "data": undefined,
              "index": 1,
              "kind": 0,
            },
            {
              "data": undefined,
              "index": 2,
              "kind": 2,
              "oldIndex": 0,
            },
            {
              "data": undefined,
              "kind": 1,
              "oldIndex": 1,
            },
          ],
          "kind": 3,
          "path": [
            "Enable enableRichHistory for full path",
          ],
          "previousLength": 3,
        },
      ],
      "data": undefined,
      "kind": "Regular",
      "missingFields": [],
      "modifyingOperation": {
        "name": "query GetTodoHistory",
        "variables": {},
      },
      "timestamp": 1577836800000,
    },
  ],
  "totalEntries": 1,
}
`;

exports[`enableRichHistory: false should capture list changes in history entries 2`] = `
[
  {
    "changes": [
      {
        "currentLength": 3,
        "itemChanges": [
          {
            "index": 0,
            "kind": 2,
            "oldIndex": 2,
          },
          {
            "index": 1,
            "kind": 0,
          },
          {
            "index": 2,
            "kind": 2,
            "oldIndex": 0,
          },
          {
            "kind": 1,
            "oldIndex": 1,
          },
        ],
        "kind": 3,
        "path": [
          "Enable enableRichHistory for full path",
        ],
        "previousLength": 3,
      },
    ],
    "kind": "Regular",
    "missingFields": [],
    "modifyingOperation": {
      "name": "query GetTodoHistory",
      "variables": {},
    },
    "timestamp": 1577836800000,
  },
]
`;

exports[`enableRichHistory: false should capture missing fields in history entries 1`] = `
[
  {
    "history": [
      {
        "changes": [
          {
            "currentLength": 2,
            "itemChanges": [
              {
                "data": undefined,
                "index": 1,
                "kind": 0,
              },
            ],
            "kind": 3,
            "path": [
              "Enable enableRichHistory for full path",
            ],
            "previousLength": 1,
          },
        ],
        "data": undefined,
        "kind": "Regular",
        "missingFields": [
          {
            "fields": [
              {
                "dataKey": "completed",
                "name": "completed",
              },
            ],
            "object": {
              "__typename": "Todo",
              "id": "1",
              "text": "Write tests",
            },
          },
          {
            "fields": [
              {
                "dataKey": "__typename",
                "name": "__typename",
              },
              {
                "dataKey": "text",
                "name": "text",
              },
              {
                "dataKey": "completed",
                "name": "completed",
              },
            ],
            "object": {
              "id": "5",
            },
          },
        ],
        "modifyingOperation": {
          "name": "query GetTodoHistory",
          "variables": {},
        },
        "timestamp": 1577836800000,
      },
    ],
    "totalEntries": 1,
  },
]
`;

exports[`enableRichHistory: false should capture missing fields in history entries 2`] = `
[
  [
    {
      "changes": [
        {
          "currentLength": 2,
          "itemChanges": [
            {
              "index": 1,
              "kind": 0,
            },
          ],
          "kind": 3,
          "path": [
            "Enable enableRichHistory for full path",
          ],
          "previousLength": 1,
        },
      ],
      "kind": "Regular",
      "missingFields": [
        {
          "fields": [
            {
              "dataKey": "completed",
              "name": "completed",
            },
          ],
          "object": {
            "__typename": "Todo",
            "id": "1",
            "text": "Write tests",
          },
        },
        {
          "fields": [
            {
              "dataKey": "__typename",
              "name": "__typename",
            },
            {
              "dataKey": "text",
              "name": "text",
            },
            {
              "dataKey": "completed",
              "name": "completed",
            },
          ],
          "object": {
            "id": "5",
          },
        },
      ],
      "modifyingOperation": {
        "name": "query GetTodoHistory",
        "variables": {},
      },
      "timestamp": 1577836800000,
    },
  ],
]
`;

exports[`enableRichHistory: false should capture optimistic updates in history entries 1`] = `
[
  {
    "history": [
      {
        "data": undefined,
        "kind": "Optimistic",
        "modifyingOperation": {
          "name": "query GetUserHistory",
          "variables": {},
        },
        "nodeDiffs": [
          {
            "diff": {
              "dirtyFields": [
                "name",
              ],
              "errors": undefined,
              "fieldQueue": [],
              "fieldState": [
                {
                  "key": "name",
                  "value": {
                    "fieldEntry": "name",
                    "kind": 4,
                    "state": {
                      "kind": 0,
                      "newValue": "Alice (optimistic)",
                      "oldValue": "Alice",
                    },
                  },
                },
              ],
              "kind": 2,
            },
            "nodeKey": "User:1",
          },
        ],
        "timestamp": 1577836800000,
        "updatedNodes": [
          "ROOT_QUERY",
          "User:1",
        ],
      },
      {
        "changes": [
          {
            "kind": 0,
            "newValue": undefined,
            "oldValue": undefined,
            "path": [
              "Enable enableRichHistory for full path",
              "name",
            ],
          },
        ],
        "data": undefined,
        "kind": "Regular",
        "missingFields": [],
        "modifyingOperation": {
          "name": "query GetUserHistory",
          "variables": {},
        },
        "timestamp": 1577836800000,
      },
    ],
    "totalEntries": 2,
  },
]
`;

exports[`enableRichHistory: false should capture optimistic updates in history entries 2`] = `
[
  [
    {
      "kind": "Optimistic",
      "modifyingOperation": {
        "name": "query GetUserHistory",
        "variables": {},
      },
      "nodeDiffs": [
        {
          "diff": {
            "dirtyFields": [
              "name",
            ],
            "errors": undefined,
            "kind": 2,
          },
          "nodeKey": "User:1",
        },
      ],
      "timestamp": 1577836800000,
      "updatedNodes": [
        "ROOT_QUERY",
        "User:1",
      ],
    },
    {
      "changes": [
        {
          "kind": 0,
          "path": [
            "Enable enableRichHistory for full path",
            "name",
          ],
        },
      ],
      "kind": "Regular",
      "missingFields": [],
      "modifyingOperation": {
        "name": "query GetUserHistory",
        "variables": {},
      },
      "timestamp": 1577836800000,
    },
  ],
]
`;

exports[`enableRichHistory: false should capture value changes in history entries 1`] = `
{
  "history": [
    {
      "changes": [
        {
          "kind": 0,
          "newValue": undefined,
          "oldValue": undefined,
          "path": [
            "Enable enableRichHistory for full path",
            "name",
          ],
        },
      ],
      "data": undefined,
      "kind": "Regular",
      "missingFields": [],
      "modifyingOperation": {
        "name": "query GetUserHistory",
        "variables": {},
      },
      "timestamp": 1577836800000,
    },
  ],
  "totalEntries": 1,
}
`;

exports[`enableRichHistory: false should capture value changes in history entries 2`] = `
[
  {
    "changes": [
      {
        "kind": 0,
        "path": [
          "Enable enableRichHistory for full path",
          "name",
        ],
      },
    ],
    "kind": "Regular",
    "missingFields": [],
    "modifyingOperation": {
      "name": "query GetUserHistory",
      "variables": {},
    },
    "timestamp": 1577836800000,
  },
]
`;

exports[`enableRichHistory: true should capture list changes in history entries 1`] = `
{
  "history": [
    {
      "changes": [
        {
          "currentLength": 3,
          "itemChanges": [
            {
              "data": {
                "__typename": "Todo",
                "id": "3",
                "text": "Ship product",
              },
              "index": 0,
              "kind": 2,
              "oldIndex": 2,
            },
            {
              "data": {
                "__typename": "Todo",
                "id": "4",
                "text": "Plan next sprint",
              },
              "index": 1,
              "kind": 0,
            },
            {
              "data": {
                "__typename": "Todo",
                "id": "1",
                "text": "Write tests",
              },
              "index": 2,
              "kind": 2,
              "oldIndex": 0,
            },
            {
              "data": {
                "__typename": "Todo",
                "id": "2",
                "text": "Fix bug",
              },
              "kind": 1,
              "oldIndex": 1,
            },
          ],
          "kind": 3,
          "path": [
            "user",
            "todos",
          ],
          "previousLength": 3,
        },
      ],
      "data": {
        "current": {
          "data": {
            "user": {
              "__typename": "User",
              "id": "1",
              "todos": [
                {
                  "__typename": "Todo",
                  "id": "1",
                  "text": "Write tests",
                },
                {
                  "__typename": "Todo",
                  "id": "2",
                  "text": "Fix bug",
                },
                {
                  "__typename": "Todo",
                  "id": "3",
                  "text": "Ship product",
                },
              ],
            },
          },
        },
        "incoming": {
          "data": {
            "user": {
              "__typename": "User",
              "id": "1",
              "todos": [
                {
                  "__typename": "Todo",
                  "id": "3",
                  "text": "Ship product",
                },
                {
                  "__typename": "Todo",
                  "id": "4",
                  "text": "Plan next sprint",
                },
                {
                  "__typename": "Todo",
                  "id": "1",
                  "text": "Write tests",
                },
              ],
            },
          },
        },
        "updated": {
          "data": {
            "user": {
              "__typename": "User",
              "id": "1",
              "todos": [
                {
                  "__typename": "Todo",
                  "id": "3",
                  "text": "Ship product",
                },
                {
                  "__typename": "Todo",
                  "id": "4",
                  "text": "Plan next sprint",
                },
                {
                  "__typename": "Todo",
                  "id": "1",
                  "text": "Write tests",
                },
              ],
            },
          },
        },
      },
      "kind": "Regular",
      "missingFields": [],
      "modifyingOperation": {
        "name": "query GetTodoHistory",
        "variables": {},
      },
      "timestamp": 1577836800000,
    },
  ],
  "totalEntries": 1,
}
`;

exports[`enableRichHistory: true should capture list changes in history entries 2`] = `
[
  {
    "changes": [
      {
        "currentLength": 3,
        "itemChanges": [
          {
            "index": 0,
            "kind": 2,
            "oldIndex": 2,
          },
          {
            "index": 1,
            "kind": 0,
          },
          {
            "index": 2,
            "kind": 2,
            "oldIndex": 0,
          },
          {
            "kind": 1,
            "oldIndex": 1,
          },
        ],
        "kind": 3,
        "path": [
          "user",
          "todos",
        ],
        "previousLength": 3,
      },
    ],
    "kind": "Regular",
    "missingFields": [],
    "modifyingOperation": {
      "name": "query GetTodoHistory",
      "variables": {},
    },
    "timestamp": 1577836800000,
  },
]
`;

exports[`enableRichHistory: true should capture missing fields in history entries 1`] = `
[
  {
    "history": [
      {
        "changes": [
          {
            "currentLength": 2,
            "itemChanges": [
              {
                "data": {
                  "id": "5",
                },
                "index": 1,
                "kind": 0,
              },
            ],
            "kind": 3,
            "path": [
              "user",
              "todos",
            ],
            "previousLength": 1,
          },
        ],
        "data": {
          "current": {
            "data": {
              "user": {
                "__typename": "User",
                "id": "1",
                "todos": [
                  {
                    "__typename": "Todo",
                    "id": "1",
                    "text": "Write tests",
                  },
                ],
              },
            },
          },
          "incoming": {
            "data": {
              "user": {
                "__typename": "User",
                "id": "1",
                "todos": [
                  {
                    "__typename": "Todo",
                    "id": "1",
                    "text": "Write tests",
                  },
                  {
                    "id": "5",
                  },
                ],
              },
            },
          },
          "updated": {
            "data": {
              "user": {
                "__typename": "User",
                "id": "1",
                "todos": [
                  {
                    "__typename": "Todo",
                    "id": "1",
                    "text": "Write tests",
                  },
                  {
                    "id": "5",
                  },
                ],
              },
            },
          },
        },
        "kind": "Regular",
        "missingFields": [
          {
            "fields": [
              {
                "dataKey": "completed",
                "name": "completed",
              },
            ],
            "object": {
              "__typename": "Todo",
              "id": "1",
              "text": "Write tests",
            },
          },
          {
            "fields": [
              {
                "dataKey": "__typename",
                "name": "__typename",
              },
              {
                "dataKey": "text",
                "name": "text",
              },
              {
                "dataKey": "completed",
                "name": "completed",
              },
            ],
            "object": {
              "id": "5",
            },
          },
        ],
        "modifyingOperation": {
          "name": "query GetTodoHistory",
          "variables": {},
        },
        "timestamp": 1577836800000,
      },
    ],
    "totalEntries": 1,
  },
]
`;

exports[`enableRichHistory: true should capture missing fields in history entries 2`] = `
[
  [
    {
      "changes": [
        {
          "currentLength": 2,
          "itemChanges": [
            {
              "index": 1,
              "kind": 0,
            },
          ],
          "kind": 3,
          "path": [
            "user",
            "todos",
          ],
          "previousLength": 1,
        },
      ],
      "kind": "Regular",
      "missingFields": [
        {
          "fields": [
            {
              "dataKey": "completed",
              "name": "completed",
            },
          ],
          "object": {
            "__typename": "Todo",
            "id": "1",
            "text": "Write tests",
          },
        },
        {
          "fields": [
            {
              "dataKey": "__typename",
              "name": "__typename",
            },
            {
              "dataKey": "text",
              "name": "text",
            },
            {
              "dataKey": "completed",
              "name": "completed",
            },
          ],
          "object": {
            "id": "5",
          },
        },
      ],
      "modifyingOperation": {
        "name": "query GetTodoHistory",
        "variables": {},
      },
      "timestamp": 1577836800000,
    },
  ],
]
`;

exports[`enableRichHistory: true should capture optimistic updates in history entries 1`] = `
[
  {
    "history": [
      {
        "data": {
          "current": {
            "data": {
              "user": {
                "__typename": "User",
                "id": "1",
                "name": "Alice",
              },
            },
          },
          "incoming": {
            "data": {
              "user": {
                "__typename": "User",
                "id": "1",
                "name": "Alice (optimistic)",
              },
            },
          },
          "updated": undefined,
        },
        "kind": "Optimistic",
        "modifyingOperation": {
          "name": "query GetUserHistory",
          "variables": {},
        },
        "nodeDiffs": [
          {
            "diff": {
              "dirtyFields": [
                "name",
              ],
              "errors": undefined,
              "fieldQueue": [],
              "fieldState": [
                {
                  "key": "name",
                  "value": {
                    "fieldEntry": "name",
                    "kind": 4,
                    "state": {
                      "kind": 0,
                      "newValue": "Alice (optimistic)",
                      "oldValue": "Alice",
                    },
                  },
                },
              ],
              "kind": 2,
            },
            "nodeKey": "User:1",
          },
        ],
        "timestamp": 1577836800000,
        "updatedNodes": [
          "ROOT_QUERY",
          "User:1",
        ],
      },
      {
        "changes": [
          {
            "kind": 0,
            "newValue": "Alice v2",
            "oldValue": "Alice",
            "path": [
              "user",
              "name",
            ],
          },
        ],
        "data": {
          "current": {
            "data": {
              "user": {
                "__typename": "User",
                "id": "1",
                "name": "Alice",
              },
            },
          },
          "incoming": {
            "data": {
              "user": {
                "__typename": "User",
                "id": "1",
                "name": "Alice v2",
              },
            },
          },
          "updated": {
            "data": {
              "user": {
                "__typename": "User",
                "id": "1",
                "name": "Alice v2",
              },
            },
          },
        },
        "kind": "Regular",
        "missingFields": [],
        "modifyingOperation": {
          "name": "query GetUserHistory",
          "variables": {},
        },
        "timestamp": 1577836800000,
      },
    ],
    "totalEntries": 2,
  },
]
`;

exports[`enableRichHistory: true should capture optimistic updates in history entries 2`] = `
[
  [
    {
      "kind": "Optimistic",
      "modifyingOperation": {
        "name": "query GetUserHistory",
        "variables": {},
      },
      "nodeDiffs": [
        {
          "diff": {
            "dirtyFields": [
              "name",
            ],
            "errors": undefined,
            "kind": 2,
          },
          "nodeKey": "User:1",
        },
      ],
      "timestamp": 1577836800000,
      "updatedNodes": [
        "ROOT_QUERY",
        "User:1",
      ],
    },
    {
      "changes": [
        {
          "kind": 0,
          "path": [
            "user",
            "name",
          ],
        },
      ],
      "kind": "Regular",
      "missingFields": [],
      "modifyingOperation": {
        "name": "query GetUserHistory",
        "variables": {},
      },
      "timestamp": 1577836800000,
    },
  ],
]
`;

exports[`enableRichHistory: true should capture value changes in history entries 1`] = `
{
  "history": [
    {
      "changes": [
        {
          "kind": 0,
          "newValue": "Alice v2",
          "oldValue": "Alice v1",
          "path": [
            "user",
            "name",
          ],
        },
      ],
      "data": {
        "current": {
          "data": {
            "user": {
              "__typename": "User",
              "id": "1",
              "name": "Alice v1",
            },
          },
        },
        "incoming": {
          "data": {
            "user": {
              "__typename": "User",
              "id": "1",
              "name": "Alice v2",
            },
          },
        },
        "updated": {
          "data": {
            "user": {
              "__typename": "User",
              "id": "1",
              "name": "Alice v2",
            },
          },
        },
      },
      "kind": "Regular",
      "missingFields": [],
      "modifyingOperation": {
        "name": "query GetUserHistory",
        "variables": {},
      },
      "timestamp": 1577836800000,
    },
  ],
  "totalEntries": 1,
}
`;

exports[`enableRichHistory: true should capture value changes in history entries 2`] = `
[
  {
    "changes": [
      {
        "kind": 0,
        "path": [
          "user",
          "name",
        ],
      },
    ],
    "kind": "Regular",
    "missingFields": [],
    "modifyingOperation": {
      "name": "query GetUserHistory",
      "variables": {},
    },
    "timestamp": 1577836800000,
  },
]
`;
